# RT-3D-Renderer

./: CMakeLists.txt
include/: camera.h  geometry.h  matrix.h  player.h  renderer.h
src/: main.cpp
